Wstępne przygotowanie panelu użytkowników

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -515,28 +515,19 @@
           <div class="panelUsers__subtitle">Zarządzanie użytkownikami systemu.</div>
           <div class="panelUsers__navigation"><a href="#" id="panel-DodajUsersButton" class="panelUsers__navigation__item">Dodaj Użytkownika</a></div>
           <div class="panelUsers__content">
-            <div class="panelUsers__content__Title">Lista Autobusów</div>
+            <div class="panelUsers__content__Title">Lista Użytkowników</div>
             <div class="panelUsers__content__Filtr">
               <div class="panelUsers__content__Filtr__item">
-                <input placeholder="Szukaj autobusu...">
-              </div>
-              <div class="panelUsers__content__Filtr__item">
-                <input placeholder="Filtr stanów autobusu">
-              </div>
-              <div class="panelUsers__content__Filtr__item">
-                <input placeholder="Typ autobusu">
-              </div>
-              <div class="panelUsers__content__Filtr__item">
-                <input placeholder="Biletomat">
+                <input placeholder="Szukaj użytkownika...">
               </div>
             </div>
             <div class="panelUsers__contentList">
               <div class="panelList">
                 <div class="panelList__header">
                   <div class="panelList__headeritemType">Typ</div>
-                  <div class="panelList__headeritemName">Numer Autobusu</div>
-                  <div class="panelList__headeritemStatus">Status</div>
-                  <div class="panelList__headeritemBiletomat">Biletomat</div>
+                  <div class="panelList__headeritemName">Email</div>
+                  <div class="panelList__headeritemStatus">Ranga</div>
+                  <div class="panelList__headeritemBiletomat">Status</div>
                   <div class="panelList__headeritemnavigation">Szczegóły</div>
                 </div>
                 <div class="panelUsers__list panelList__content">
