--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
     -->
     <div class="bar"></div>
     <div class="header">
-      <div class="header__corner"><i class="fa fa-bars"></i></div>
+      <div class="header__corner"><i class="fa fa-bus"></i></div>
       <div class="header__switcher -hidden">
         <div class="background"></div>
         <ul class="header__panel">
@@ -59,33 +59,33 @@
         </ul>
       </div>
     </div>
-    <div class="headerLogo"><i class="fa fa-bus"></i><span><b>mpk</b></span></div>
+    <div class="headerLogo"><span>MPK OLSZTYN</span></div>
     <div class="headerProfile">
       <div class="headerProfile__corner"><i class="fa fa-gears"></i></div>
       <div class="headerProfile__switcher -hidden">
         <div class="background"></div>
         <ul class="headerProfile__panel">
-          <li id="panel-loginButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></li>
-          <li id="panel-registerButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></li>
+          <li id="panel-loginButton" class="headerProfile__item"><a href="#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                  <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
+          <li id="panel-registerButton" class="headerProfile__item"><a href="#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                  <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
           <li id="panel-odzyskajKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                 <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></li>
           <li id="panel-mojeKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                 <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></li>
           <li id="panel-InformacjeButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                 <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></li>
-          <li id="panel-wylogujButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></li>
+          <li id="panel-wylogujButton" class="headerProfile__item"><a href="#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                  <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
         </ul>
       </div>
     </div>
-    <div class="headerUserPanel"><span>Zalogowany: nazwaUzytkownika@cmok.pl</span></div>
+    <div class="headerUserPanel"><span>Zalogowany: {{vm.user.username}}</span></div>
     <div id="containerDrag">
       <div class="googleMaps">
         <div id="googleMaps" class="googleMaps__API"></div>
       </div>
-      <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }" ng-if="flash" ng-bind="flash.message"></div>
+      <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }" ng-if="flash" ng-bind="flash.message" class="flash__info"></div>
       <div ng-view></div>
     </div>
     <script src="app.js"></script>
