--- a/szablon/activitySenderTest.html
+++ b/szablon/activitySenderTest.html
@@ -3,6 +3,13 @@
         + ':35729/livereload.js"></'
         + 'script>')
 --><!-- bower:js -->
-<script src="http://dev.fm.3sat.pl/scripts/reconnecting-websocket.js"></script>
-<script src="fakeDevice.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/ev-emitter/ev-emitter.js"></script>
+<script src="bower_components/imagesloaded/imagesloaded.js"></script>
+<script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
+<script src="bower_components/slick.js/slick/slick.min.js"></script>
+<script src="bower_components/superfish/dist/js/superfish.js"></script>
+<script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
+<script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
+<script src="bower_components/select2/dist/js/select2.js"></script>
 <!-- endbower -->
