Przygotowanie pod angulara

--- a/app/panelResetPassword.html
+++ b/app/panelResetPassword.html
@@ -28,7 +28,7 @@
         <input name="user_password_again_new" type="password" placeholder="Powtórz hasło"/><i class="fa fa-lock"></i>
       </div>
       <button type="submit">Zatwierdz nowe hasło</button>
-    </div><a href="#"><span class="panelResetPassword__close"><span class="panelResetPassword__icon fa fa-times"></span></span></a>
+    </div><a href="#/"><span class="panelResetPassword__close"><span class="panelResetPassword__icon fa fa-times"></span></span></a>
     <div class="panelResetPassword__navigation">Nie masz konta?<a href="#/register" class="panelResetPassword__ToRegister">Zarejestruj się.</a></div>
   </div>
 </div>
