--- a/app/panelAutobusy.html
+++ b/app/panelAutobusy.html
@@ -1,5 +1,5 @@
 
-<div class="panelAutobusy panel dragger">
+<div class="panelAutobusy panel">
   <div class="panelAutobusy__title">Panel Zarządzania Autobusami</div>
   <div class="panelAutobusy__wrapper">
     <div class="panelAutobusy__content">
@@ -48,60 +48,13 @@
               <div class="panelList__itemStatus">Aktywny</div>
               <div class="panelList__itemBiletomat">
                 <div class="fa fa-times-circle-o"></div>
-              </div>
-              <div class="panelList__navigation">Zobacz</div>
+              </div><a href="#/bus/show">
+                <div class="panelList__navigation">Zobacz</div></a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="panelAutobusy__navigation"><a href="#" id="panel-DodajautobusyButton" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div>
-  </div><a href="#"><span class="panelAutobusy__close"><span class="panelAutobusy__icon fa fa-times"></span></span></a>
-</div>
-<div class="panelDodajAutobus__dragger">
-  <div class="panelDodajAutobus panel -hidden dragger">
-    <div class="panelDodajAutobus__title">Dodaj Autobus</div>
-    <div class="panelDodajAutobus__wrapper">
-      <div class="panelDodajAutobus__content">
-        <div class="panelDodajAutobus__content__Title">Dane Autobusu</div>
-        <div class="panelDodajAutobus__content__form">
-          <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
-            <input placeholder="Podaj Nr. Rejestracyjny"/>
-          </div>
-          <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
-            <input placeholder="Podaj Nr. VIN"/>
-          </div>
-          <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
-            <select class="js-example-placeholder-single crud">
-              <option value="0">Normalny</option>
-              <option value="1">Przegubowy</option>
-            </select>
-          </div>
-          <div class="panelDodajAutobus__content__form__item"><span class="item">Czy ma Biletomat?</span>
-            <select class="js-example-placeholder-single crud">
-              <option value="0">Nie</option>
-              <option value="1">Tak</option>
-            </select>
-          </div>
-          <div class="panelDodajAutobus__content__form__item"><span class="item">Status</span>
-            <select class="js-example-placeholder-single crud">
-              <option value="0">Aktywny</option>
-              <option value="1">W zajezdni</option>
-              <option value="2">W serwisie</option>
-            </select>
-          </div>
-          <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Autobusu</span>
-            <select class="js-example-placeholder-single scrud">
-              <option value="0">100</option>
-              <option value="1">103</option>
-              <option value="2">104</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      <div class="panelDodajAutobus__navigation">
-        <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="#" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
-      </div>
-    </div><span class="panelDodajAutobus__close"><span class="panelDodajAutobus__icon fa fa-times"></span></span>
-  </div>
+    <div class="panelAutobusy__navigation"><a href="#/bus/add" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div>
+  </div><a href="#/"><span class="panelAutobusy__close"><span class="panelAutobusy__icon fa fa-times"></span></span></a>
 </div>
