Przygotowanie pod angulara

--- a/app/panelPrzystanki.html
+++ b/app/panelPrzystanki.html
@@ -10,30 +10,6 @@
         </div>
         <div class="panelPrzystanki__content__Filtr__item">
           <input placeholder="Szukaj ulicy"/>
-        </div>
-        <div class="panelPrzystanki__content__Filtr__item">
-          <select multiple="multiple" class="js-example-placeholder-multiple linie">
-            <option></option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
-            <option>9</option>
-            <option>10</option>
-            <option>11</option>
-            <option>12</option>
-            <option>13</option>
-            <option>14</option>
-            <option>15</option>
-            <option>16</option>
-            <option>17</option>
-            <option>18</option>
-            <option>19</option>
-          </select>
           <!--input(placeholder="Typ autobusu")-->
         </div>
         <div class="panelPrzystanki__content__Filtr__item check">
@@ -50,22 +26,22 @@
       <div class="panelPrzystanki__contentList">
         <div class="panelList">
           <div class="panelList__header">
-            <div class="panelList__headeritemName">Nazwa przystanku</div>
-            <div class="panelList__headeritemUlica">Ulica</div>
-            <div class="panelList__headeritemBiletomat">Biletomat</div>
-            <div class="panelList__headeritemKiosk">Kiosk</div>
-            <div class="panelList__headeritemnavigation">Szczegóły</div>
+            <div class="panelList__headeritem">Nazwa przystanku</div>
+            <div class="panelList__headeritem">Ulica</div>
+            <div class="panelList__headeritem">Biletomat</div>
+            <div class="panelList__headeritem">Kiosk</div>
+            <div class="panelList__headeritem">Szczegóły</div>
           </div>
           <div id="GetBusstopList" class="panelPrzystanki__list panelList__content">
             <div class="panelList__item">
-              <div class="panelList__itemName">Przykładowa</div>
-              <div class="panelList__itemUlica">Przykładowa</div>
-              <div class="panelList__itemBiletomat">
+              <div class="panelList__itemCell">Przykładowa</div>
+              <div class="panelList__itemCell">Przykładowa</div>
+              <div class="panelList__itemCell">
                 <div class="fa fa-times-circle-o"></div>
               </div>
-              <div class="panelList__itemKiosk">
+              <div class="panelList__itemCell">
                 <div class="fa fa-times-circle-o"></div>
-              </div><a href="#/bus/show" class="panelList__navigation">Zobacz</a>
+              </div><a href="#/bus/show" class="panelList__itemCell">Zobacz</a>
             </div>
           </div>
         </div>
