--- a/app/panelResetPassword.html
+++ b/app/panelResetPassword.html
@@ -1,34 +1,1 @@
-
-<div class="panelResetPassword panel">
-  <div class="panelResetPassword__wrapper">
-    <div class="panelResetPassword__title">Panel Odzyskiwania Hasła</div>
-    <div class="panelResetPassword__alert -info -hidden">
-      <h3><i class="fa fa-warning"></i>Uwaga!</h3>Nie ma takiego konta.
-    </div>
-    <div class="panelResetPassword__alert -success -hidden">
-      <h3><i class="fa fa-info"></i>Informacja!</h3>Na wskazany email został wysłany link weryfikacyjny.
-    </div>
-    <div class="panelResetPassword__alert -success -hidden">
-      <h3><i class="fa fa-info"></i>Informacja!</h3>Nowe hasło zostało ustawione. Możesz się teraz
-    </div>
-    <div class="panelResetPassword__alert -info -hidden">
-      <h3><i class="fa fa-warning"></i>Informacja!</h3>Hasła nie są takie same.<a href="#" class="panelResetPassword__ToLogin">zalogować</a>.
-    </div>
-    <div class="panelResetPassword__form">
-      <div class="panelResetPassword__formwrapper">
-        <input name="user_email" placeholder="E-mail"/><i class="fa fa-envelope-o"></i>
-        <button type="submit">Odzyskaj hasło</button>
-      </div>
-    </div>
-    <div class="panelResetPassword__form">
-      <div class="panelResetPassword__formwrapper">
-        <input name="user_password_new" type="password" placeholder="Hasło"/><i class="fa fa-lock"></i>
-      </div>
-      <div class="panelResetPassword__formwrapper">
-        <input name="user_password_again_new" type="password" placeholder="Powtórz hasło"/><i class="fa fa-lock"></i>
-      </div>
-      <button type="submit">Zatwierdz nowe hasło</button>
-    </div><a href="#"><span class="panelResetPassword__close"><span class="panelResetPassword__icon fa fa-times"></span></span></a>
-    <div class="panelResetPassword__navigation">Nie masz konta?<a href="#/register" class="panelResetPassword__ToRegister">Zarejestruj się.</a></div>
-  </div>
-</div>
+<div class="panelResetPassword panel"><div class="panelResetPassword__wrapper"><div class="panelResetPassword__title">Panel Odzyskiwania Hasła</div><div class="panelResetPassword__alert -info -hidden"><h3><i class="fa fa-warning"></i>Uwaga!</h3>Nie ma takiego konta.</div><div class="panelResetPassword__alert -success -hidden"><h3><i class="fa fa-info"></i>Informacja!</h3>Na wskazany email został wysłany link weryfikacyjny.</div><div class="panelResetPassword__alert -success -hidden"><h3><i class="fa fa-info"></i>Informacja!</h3>Nowe hasło zostało ustawione. Możesz się teraz</div><div class="panelResetPassword__alert -info -hidden"><h3><i class="fa fa-warning"></i>Informacja!</h3>Hasła nie są takie same.<a href="#" class="panelResetPassword__ToLogin">zalogować</a>.</div><div class="panelResetPassword__form"><div class="panelResetPassword__formwrapper"><input name="user_email" placeholder="E-mail"/><i class="fa fa-envelope-o"></i><button type="submit">Odzyskaj hasło</button></div></div><div class="panelResetPassword__form"><div class="panelResetPassword__formwrapper"><input name="user_password_new" type="password" placeholder="Hasło"/><i class="fa fa-lock"></i></div><div class="panelResetPassword__formwrapper"><input name="user_password_again_new" type="password" placeholder="Powtórz hasło"/><i class="fa fa-lock"></i></div><button type="submit">Zatwierdz nowe hasło</button></div><a href="#"><span class="panelResetPassword__close"><span class="panelResetPassword__icon fa fa-times"></span></span></a><div class="panelResetPassword__navigation">Nie masz konta?<a href="#/register" class="panelResetPassword__ToRegister">Zarejestruj się.</a></div></div></div>
